--- a/app/src/main/res/layout/fragment_usuario_registrar.xml
+++ b/app/src/main/res/layout/fragment_usuario_registrar.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.principalMenu.ui.inventario.gestionUsuario.usuario.UsuarioRegistrarFragment"
     android:orientation="vertical"
     android:layout_marginTop="50dp">
@@ -72,7 +73,8 @@
         android:layout_height="wrap_content"
         android:paddingStart="10sp"
         android:paddingEnd="10sp"
-        android:paddingBottom="8sp">
+        android:paddingBottom="8sp"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
