--- a/app/src/main/res/layout/fragment_venta_modificar.xml
+++ b/app/src/main/res/layout/fragment_venta_modificar.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:paddingEnd="15sp"
         android:paddingStart="15sp"
-        android:paddingTop="10sp">
+        android:paddingTop="10sp"
+        android:visibility="gone">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -110,7 +111,8 @@
         android:layout_height="wrap_content"
         android:paddingEnd="15sp"
         android:paddingStart="15sp"
-        android:paddingTop="10sp">
+        android:paddingTop="10sp"
+        android:enabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -125,7 +127,8 @@
         android:layout_height="wrap_content"
         android:paddingEnd="15sp"
         android:paddingStart="15sp"
-        android:paddingTop="10sp">
+        android:paddingTop="10sp"
+        android:enabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -135,7 +138,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnregistrarventa"
+        android:id="@+id/btnmodificarventa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guardar"
